agregar fotografia a carpeta y modificacion de parrafo principal

--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
                     Diseñadora <br> UX/UI
                 </h1>
                 <p class="my-5">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
-                    dignissimos labore sequi. Cupiditate reiciendis eius dolore, illum adipisci harum voluptas iste
-                    mollitia inventore provident labore voluptatum nemo.
+                    Diseñadora de página web de distintos formatos que servirán a tu negocio, desde trabajaos freelance hasta contrato con empresa.
                 </p>
                 <div class="mb-5 pb-5">
                     <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
